option java_outer_classname="InvokeEPKeyValuePackageResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message InvokeEPKeyValuePackageResponse {
	repeated string keys = 1;
	repeated bytes values = 2;	
}